--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@tailwindcss/forms": "^0.5.7",
     "lucide-react": "^0.368.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
